# condomob-documents-ocr2data

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/prompts/: copilot-instructions.md
.github/workflows/: standard.yml
docs/resources/: relacao_unidades_renomeadas.csv  resultado-analise-contacontabil.csv
src/: analytical.py  analytical_v2.py  constants.py  extract.py  llmwhisperer.py  main.py  spliter.py  test_extract.py  test_llmwhisperer.py  test_spliter.py
src/fixtures/: sample-1.txt  sample-2.txt
src/processors/: docling_analytical.py  llmwhisperer.py  llmwhisperer_analytical.py
src/rp_transformers/: analytical.py
src/services/: gcp.py  llmwhisperer.py
src/transformers/: analytical.py
src/utils/: constants.py  extract_utils.py  merger.py
tests/: test_main.py  test_main_analytical.py  test_main_merger.py
tests/processors/: test_docling_analytical.py  test_llmwhisperer.py  test_llmwhisperer_analytical.py
tests/processors/fixtures/: sample-1-extra-column.txt  sample-1.txt  sample-2.txt
tests/rp_transformers/: test_analytical.py  test_rp_transformer_analytical.py
tests/services/: test_llmwhisperer.py
tests/utils/: test_merger.py  test_spliter.py
