[tool.poetry]
name = "condomob-documents-ocr2data"
version = '0.0.0'
description = 'Parser de documentos de prestações de contas do sistema Condomob'
authors = ["clayton@cavaleiro.dev"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = '>=3.13,<3.14'
typer = "^0.19.2"
pyyaml = "^6.0.2"
docling = "^2.58.0"
pandas = "^2.3.2"
pypdfium2 = "^4.30.0"
tesserocr = "^2.8.0"
mdpd = { version = "^0.2.1", python = ">=3.9,<3.13" }
llmwhisperer-client = "^2.4.2"
google-cloud-bigquery = "^3.35.1"
pyarrow = "^22.0.0"
pandas-gbq = "^0.31.0"
pandas-stubs = "^2.3.2.250827"
pypdf = "^6.1.0"
transformers = "^4.56.2"
urllib3 = "^2"
triton = "^3.4.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"
ruff = "^0.14.6"
pytest = "^9.0.1"
pytest-xdist = "^3.7.0"
pytest-cov = "^7.0.0"
pytest-deadfixtures = '^3.0.0'
pytest-dotenv = '^0.5.2'
pytest-env = '^1.1.5'
pytest-socket = '^0.7.0'
pytest-vcr = '^1.0.2'
pytest-asyncio = '^1.2.0'
pydevd = "^3.4.1"
mypy = "^1.18.2"
types-pyyaml = "^6.0.12.20250516"
pre-commit = "^4.3.0"

[tool.mypy]
disable_error_code = ["import-untyped", "assignment", "arg-type", "misc"]

[tool.ruff]
line-length = 79
target-version = "py313"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["E501"]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 30

[tool.coverage.run]
omit = ['tests/**', 'src/**/settings/**', 'src/**/migrations/**', '/tmp/**']
branch = true
relative_files = true

[tool.coverage.report]
precision = 2
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]

build-backend = "poetry.core.masonry.api"
